--- a/zookeeper_jaas.conf
+++ b/zookeeper_jaas.conf
@@ -2,6 +2,10 @@ Server {
   org.apache.zookeeper.server.auth.DigestLoginModule required
   username="zookeeper"
   password="zookeeper-secret"
-  user_kafka="kafka-secret"
-  user_xdf="xdf-secret";
+  user_zookeeper="zookeeper-secret"
+};
+Client {
+  org.apache.zookeeper.server.auth.DigestLoginModule required
+  username="zookeeper"
+  password="zookeeper-secret";
 };
